--- a/OpenLawOffice.WebClient/OpenLawOffice.WebClient.csproj
+++ b/OpenLawOffice.WebClient/OpenLawOffice.WebClient.csproj
@@ -86,7 +86,7 @@
     <Compile Include="Controllers\SecurityAreaAclsController.cs" />
     <Compile Include="Controllers\SecurityFilterAttribute.cs" />
     <Compile Include="Controllers\SecurityAreasController.cs" />
-    <Compile Include="Controllers\TaskAssignedContactController.cs" />
+    <Compile Include="Controllers\TaskAssignedContactsController.cs" />
     <Compile Include="Controllers\TasksController.cs" />
     <Compile Include="Controllers\TimingController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
@@ -170,16 +170,18 @@
     <Content Include="Views\Shared\EditorTemplates\PermissionViewModel.ascx" />
     <Content Include="Views\Shared\InsufficientRights.aspx" />
     <Content Include="Views\Shared\InvalidRequest.aspx" />
-    <Content Include="Views\TaskAssignedContact\AssignContact.aspx" />
-    <Content Include="Views\TaskAssignedContact\Delete.aspx" />
-    <Content Include="Views\TaskAssignedContact\Details.aspx" />
-    <Content Include="Views\TaskAssignedContact\Edit.aspx" />
-    <Content Include="Views\TaskAssignedContact\SelectContactToAssign.aspx" />
-    <Content Include="Views\TaskResponsibleUser\Create.aspx" />
+    <Content Include="Views\TaskAssignedContacts\AssignContact.aspx" />
+    <Content Include="Views\TaskAssignedContacts\Delete.aspx" />
+    <Content Include="Views\TaskAssignedContacts\Details.aspx" />
+    <Content Include="Views\TaskAssignedContacts\Edit.aspx" />
+    <Content Include="Views\TaskAssignedContacts\SelectContactToAssign.aspx" />
+    <Content Include="Views\TaskResponsibleUsers\Create.aspx" />
     <Content Include="Views\Tasks\Contacts.aspx" />
     <Content Include="Views\Tasks\Create.aspx" />
     <Content Include="Views\Tasks\Details.aspx" />
     <Content Include="Views\Tasks\Edit.aspx" />
+    <Content Include="Views\Tasks\ResponsibleUsers.aspx" />
+    <Content Include="Views\Tasks\Tags.aspx" />
     <Content Include="Views\Tasks\Time.aspx" />
     <Content Include="Views\Timing\Details.aspx" />
     <Content Include="Views\Timing\Edit.aspx" />
