--- a/OpenLawOffice.WebClient/Web.config
+++ b/OpenLawOffice.WebClient/Web.config
@@ -11,12 +11,12 @@
     <add name="Postgres" providerName="Npgsql" connectionString="server=localhost;Port=5432;Database=a1;User Id=postgres;Password=postgres;" />
   </connectionStrings>
 
-  <system.data>
+  <!--<system.data>
     <DbProviderFactories>
       <add name="Npgsql Data Provider" invariant="Npgsql" support="FF" description=".Net Framework Data Provider for Postgresql Server"
            type="Npgsql.NpgsqlFactory, Npgsql, Version=2.0.14.3, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7" />
     </DbProviderFactories>
-  </system.data>
+  </system.data>-->
   
   <system.web>
     <compilation debug="true" targetFramework="4.0">
