Documents including very basic versioning.

--- a/OpenLawOffice.WebClient/Web.config
+++ b/OpenLawOffice.WebClient/Web.config
@@ -6,6 +6,13 @@
   -->
 
 <configuration>
+  <configSections>
+    <section name="fileStorageSettings" type="OpenLawOffice.Data.FileStorageSettings"/>
+  </configSections>
+
+  <fileStorageSettings currentVersionPath="E:\Temp\Current\" 
+                       previousVersionsPath="E:\Temp\Previous\" />
+  
   <connectionStrings>
     <!--<add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient" />-->
     <add name="Postgres" providerName="Npgsql" connectionString="server=localhost;Port=5432;Database=a1;User Id=postgres;Password=postgres;" />
