--- a/OpenLawOffice.WebClient/OpenLawOffice.WebClient.csproj
+++ b/OpenLawOffice.WebClient/OpenLawOffice.WebClient.csproj
@@ -94,12 +94,12 @@
     <Compile Include="Controllers\TaskTimeController.cs" />
     <Compile Include="Controllers\TimingController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
+    <Compile Include="Controllers\VersionsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\EnumDropDownListForHelper.cs" />
     <Compile Include="Security.cs" />
-    <Compile Include="Settings.cs" />
     <Compile Include="ViewModels\Account\LoginModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserCache.cs" />
@@ -108,7 +108,6 @@
     <Compile Include="ViewModels\Contacts\SelectableContactViewModel.cs" />
     <Compile Include="ViewModels\CoreViewModel.cs" />
     <Compile Include="ViewModels\DateOnlyViewModelBase.cs" />
-    <Compile Include="ViewModels\Documents\DocumentVersionViewModel.cs" />
     <Compile Include="ViewModels\Documents\DocumentViewModel.cs" />
     <Compile Include="ViewModels\Documents\VersionViewModel.cs" />
     <Compile Include="ViewModels\JqGridObject.cs" />
@@ -143,6 +142,9 @@
     <Content Include="Views\Contacts\Details.aspx" />
     <Content Include="Views\Contacts\Edit.aspx" />
     <Content Include="Views\Contacts\Index.aspx" />
+    <Content Include="Views\Documents\Create.aspx" />
+    <Content Include="Views\Documents\Details.aspx" />
+    <Content Include="Views\Documents\Edit.aspx" />
     <Content Include="Views\Installation\Complete.aspx" />
     <Content Include="Views\Installation\Index.aspx" />
     <Content Include="Views\Installation\MissingDbInstallScript.aspx" />
@@ -210,14 +212,19 @@
     <Content Include="Views\Users\Details.aspx" />
     <Content Include="Views\Users\Edit.aspx" />
     <Content Include="Views\Users\Index.aspx" />
+    <Content Include="Views\Versions\Create.aspx" />
+    <Content Include="Views\Versions\Details.aspx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Site.css" />
     <Content Include="Views\Home\About.aspx" />
@@ -229,7 +236,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Scripts\" />
-    <Folder Include="Views\Documents\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\OpenLawOffice.Common\OpenLawOffice.Common.csproj">
