--- a/OpenLawOffice.WebClient/OpenLawOffice.WebClient.csproj
+++ b/OpenLawOffice.WebClient/OpenLawOffice.WebClient.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserCache.cs" />
     <Compile Include="ViewModels\AssignmentTypeViewModel.cs" />
+    <Compile Include="ViewModels\Contacts\ConflictViewModel.cs" />
     <Compile Include="ViewModels\Contacts\ContactViewModel.cs" />
     <Compile Include="ViewModels\Contacts\SelectableContactViewModel.cs" />
     <Compile Include="ViewModels\CoreViewModel.cs" />
@@ -138,6 +139,7 @@
     <Content Include="LICENSE.txt" />
     <Content Include="Views\Account\Login.aspx" />
     <Content Include="Views\Contacts\Assign.aspx" />
+    <Content Include="Views\Contacts\Conflicts.aspx" />
     <Content Include="Views\Contacts\Create.aspx" />
     <Content Include="Views\Contacts\Details.aspx" />
     <Content Include="Views\Contacts\Edit.aspx" />
