--- a/OpenLawOffice.WebClient/OpenLawOffice.WebClient.csproj
+++ b/OpenLawOffice.WebClient/OpenLawOffice.WebClient.csproj
@@ -88,12 +88,15 @@
     <Compile Include="Controllers\SecurityAreaAclsController.cs" />
     <Compile Include="Controllers\SecurityFilterAttribute.cs" />
     <Compile Include="Controllers\SecurityAreasController.cs" />
+    <Compile Include="Controllers\TagCategoriesController.cs" />
     <Compile Include="Controllers\TaskAssignedContactsController.cs" />
     <Compile Include="Controllers\TaskResponsibleUsersController.cs" />
     <Compile Include="Controllers\TasksController.cs" />
+    <Compile Include="Controllers\TaskTagsController.cs" />
     <Compile Include="Controllers\TaskTimeController.cs" />
     <Compile Include="Controllers\TimingController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
+    <Compile Include="Controllers\UserSettingsController.cs" />
     <Compile Include="Controllers\VersionsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -125,6 +128,7 @@
     <Compile Include="ViewModels\Security\SecuredResourceAclViewModel.cs" />
     <Compile Include="ViewModels\Security\SecuredResourceViewModel.cs" />
     <Compile Include="ViewModels\Security\UserViewModel.cs" />
+    <Compile Include="ViewModels\Settings\UserSettings.cs" />
     <Compile Include="ViewModels\Tagging\TagBaseViewModel.cs" />
     <Compile Include="ViewModels\Tagging\TagCategoryViewModel.cs" />
     <Compile Include="ViewModels\Tasks\TaskAssignedContactViewModel.cs" />
@@ -209,6 +213,10 @@
     <Content Include="Views\Tasks\ResponsibleUsers.aspx" />
     <Content Include="Views\Tasks\Tags.aspx" />
     <Content Include="Views\Tasks\Time.aspx" />
+    <Content Include="Views\TaskTags\Create.aspx" />
+    <Content Include="Views\TaskTags\Delete.aspx" />
+    <Content Include="Views\TaskTags\Details.aspx" />
+    <Content Include="Views\TaskTags\Edit.aspx" />
     <Content Include="Views\TaskTime\Create.aspx" />
     <Content Include="Views\TaskTime\Details.aspx" />
     <Content Include="Views\TaskTime\SelectContactToAssign.aspx" />
@@ -242,6 +250,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Scripts\" />
+    <Folder Include="Views\UserSettings\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\OpenLawOffice.Common\OpenLawOffice.Common.csproj">
