--- a/OpenLawOffice.WebClient/Web.config
+++ b/OpenLawOffice.WebClient/Web.config
@@ -9,31 +9,40 @@
   <configSections>
     <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
     <section name="fileStorageSettings" type="OpenLawOffice.Data.FileStorageSettings" />
+
+    <sectionGroup name="elmah">
+      <section name="security" requirePermission="false" type="Elmah.SecuritySectionHandler, Elmah" />
+      <section name="errorLog" requirePermission="false" type="Elmah.ErrorLogSectionHandler, Elmah" />
+      <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
+      <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
+    </sectionGroup>
   </configSections>
 
   <nlog autoReload="true">
-    <variable name="logDirectory" value="E:\Projects\OpenLawOffice\OpenLawOffice.WebClient\bin\" />
+    <variable name="logDirectory" value="E:\Logs\" />
     <targets>
-      <target name="file" type="AsyncWrapper" queueLimit="5000" overflowAction="Discard">
-        <target type="File" fileName="${logDirectory}log.txt"
-                layout="${longdate}|${level:uppercase=true}|${logger}|${message}"
-                lineEnding="CRLF" archiveAboveSize="102400" maxArchiveFiles="9"
-                archiveNumbering="Rolling" />
+      <target name="debugFile" type="AsyncWrapper" queueLimit="5000" overflowAction="Discard">
+        <target type="File" fileName="${logDirectory}Debug.txt" layout="${longdate}|${level:uppercase=true}|${callsite}|${message}" lineEnding="CRLF" archiveAboveSize="102400" maxArchiveFiles="9" archiveNumbering="Rolling" />
       </target>
-      <target type="Debugger" name="debugger" layout="${longdate}|${level:uppercase=true}|${logger}|${message}" />
+      <target name="errorFile" type="AsyncWrapper" queueLimit="5000" overflowAction="Discard">
+        <target type="File" fileName="${logDirectory}Error.txt" layout="${longdate}|${level:uppercase=true}|${callsite}|${message}" lineEnding="CRLF" archiveAboveSize="102400" maxArchiveFiles="9" archiveNumbering="Rolling" />
+      </target>
+      <target type="Debugger" name="debugger" layout="${longdate}|${level:uppercase=true}|${callsite}|${message}" />
     </targets>
     <rules>
-      <logger name="*" minlevel="Debug" writeTo="file" />
+      <logger name="*" minlevel="Debug" writeTo="debugFile" />
+      <logger name="*" minlevel="Error" writeTo="errorFile" />
       <logger name="*" minlevel="Debug" writeTo="debugger" />
     </rules>
   </nlog>
 
-  <fileStorageSettings currentVersionPath="C:\Temp\Current\"
-                       previousVersionsPath="C:\Temp\Previous\" />
+  <fileStorageSettings currentVersionPath="C:\Temp\Current\" previousVersionsPath="C:\Temp\Previous\" />
 
   <connectionStrings>
     <!--<add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient" />-->
+    <!-- TODO: Replace the ****'s with the correct entries -->
     <add name="Postgres" providerName="Npgsql" connectionString="server=localhost;Port=5432;Database=a1;User Id=postgres;Password=postgres;" />
+    <add name="elmah-postgresql" connectionString="Server=****;Port=****;Database=****;User Id=****;Password=****;" />
   </connectionStrings>
 
   <!--<system.data>
@@ -44,6 +53,7 @@
   </system.data>-->
 
   <system.web>
+    <customErrors mode="On" />
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
         <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
@@ -86,11 +96,21 @@
         <add namespace="System.Web.Routing" />
       </namespaces>
     </pages>
+    <httpModules>
+      <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" />
+      <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" />
+      <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" />
+    </httpModules>
   </system.web>
 
   <system.webServer>
+
+    <modules runAllManagedModulesForAllRequests="true">
+      <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" />
+      <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" />
+      <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" />
+    </modules>
     <validation validateIntegratedModeConfiguration="false" />
-    <modules runAllManagedModulesForAllRequests="true" />
   </system.webServer>
 
   <runtime>
@@ -105,4 +125,34 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+
+  <elmah>
+    <!--
+        See http://code.google.com/p/elmah/wiki/SecuringErrorLogPages for
+        more information on remote access and securing ELMAH.
+    -->
+    <security allowRemoteAccess="false" />
+    <errorLog type="Elmah.PgsqlErrorLog, Elmah" connectionStringName="Postgres" />
+  </elmah>
+  <location path="elmah.axd" inheritInChildApplications="false">
+    <system.web>
+      <httpHandlers>
+        <add verb="POST,GET,HEAD" path="elmah.axd" type="Elmah.ErrorLogPageFactory, Elmah" />
+      </httpHandlers>
+      <!--
+        See http://code.google.com/p/elmah/wiki/SecuringErrorLogPages for
+        more information on using ASP.NET authorization securing ELMAH.
+
+      <authorization>
+        <allow roles="admin" />
+        <deny users="*" />
+      </authorization>
+      -->
+    </system.web>
+    <system.webServer>
+      <handlers>
+        <add name="ELMAH" verb="POST,GET,HEAD" path="elmah.axd" type="Elmah.ErrorLogPageFactory, Elmah" preCondition="integratedMode" />
+      </handlers>
+    </system.webServer>
+  </location>
 </configuration>
