--- a/OpenLawOffice.WebClient/packages.config
+++ b/OpenLawOffice.WebClient/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="3.2.0-ci1011" targetFramework="net40" />
-  <package id="NLog" version="2.1.0" targetFramework="net40" />
+  <package id="elmah" version="1.2.2" targetFramework="net40" />
+  <package id="elmah.corelibrary" version="1.2.2" targetFramework="net40" />
+  <package id="elmah.postgresql" version="1.2" targetFramework="net40" />
 </packages>
