--- a/OpenLawOffice.WebClient/Web.config
+++ b/OpenLawOffice.WebClient/Web.config
@@ -36,7 +36,7 @@
     </rules>
   </nlog>
 
-  <fileStorageSettings currentVersionPath="C:\Temp\Current\" previousVersionsPath="C:\Temp\Previous\" />
+  <fileStorageSettings currentVersionPath="E:\Temp\Current\" previousVersionsPath="E:\Temp\Previous\" />
 
   <connectionStrings>
     <!--<add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient" />-->
