--- a/OpenLawOffice.WebClient/Web.config
+++ b/OpenLawOffice.WebClient/Web.config
@@ -45,15 +45,15 @@
     <add name="elmah-postgresql" connectionString="Server=****;Port=****;Database=****;User Id=****;Password=****;" />
   </connectionStrings>
 
-  <!--<system.data>
+  <system.data>
     <DbProviderFactories>
       <add name="Npgsql Data Provider" invariant="Npgsql" support="FF" description=".Net Framework Data Provider for Postgresql Server"
-           type="Npgsql.NpgsqlFactory, Npgsql, Version=2.0.14.3, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7" />
+           type="Npgsql.NpgsqlFactory, Npgsql, Version=2.0.6.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7" />
     </DbProviderFactories>
-  </system.data>-->
+  </system.data>
 
   <system.web>
-    <customErrors mode="On" />
+    <customErrors mode="Off" />
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
         <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
@@ -121,7 +121,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Npgsql" publicKeyToken="5d8b90d52f46fda7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.0.14.3" newVersion="2.0.14.3" />
+        <bindingRedirect oldVersion="0.0.0.0-2.1.3.0" newVersion="2.0.6.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
