--- a/OpenLawOffice.WebClient/Web.config
+++ b/OpenLawOffice.WebClient/Web.config
@@ -36,7 +36,9 @@
     </rules>
   </nlog>
 
-  <fileStorageSettings currentVersionPath="E:\Temp\Current\" previousVersionsPath="E:\Temp\Previous\" />
+  <fileStorageSettings currentVersionPath="E:\Temp\Current\" 
+                       previousVersionsPath="E:\Temp\Previous\"
+                       tempPath="E:\Temp\Temp\"/>
 
   <connectionStrings>
     <!--<add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient" />-->
