--- a/OpenLawOffice.WebClient/Web.config
+++ b/OpenLawOffice.WebClient/Web.config
@@ -9,6 +9,7 @@
   <configSections>
     <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
     <section name="fileStorageSettings" type="OpenLawOffice.Data.FileStorageSettings" />
+    <section name="globalFilterSettings" type="OpenLawOffice.WebClient.GlobalFilterSettings"/>
 
     <sectionGroup name="elmah">
       <section name="security" requirePermission="false" type="Elmah.SecuritySectionHandler, Elmah" />
@@ -39,6 +40,12 @@
   <fileStorageSettings currentVersionPath="E:\Temp\Current\" 
                        previousVersionsPath="E:\Temp\Previous\"
                        tempPath="E:\Temp\Temp\"/>
+
+  <globalFilterSettings>
+    <tagFilters>
+      <tagFilter name="tag1" category="Status" tag="Pending" />
+    </tagFilters>
+  </globalFilterSettings>
 
   <connectionStrings>
     <!--<add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient" />-->
