Implemented management of event and matter relationships.

--- a/OpenLawOffice.WebClient/OpenLawOffice.WebClient.csproj
+++ b/OpenLawOffice.WebClient/OpenLawOffice.WebClient.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Controllers\DocumentsController.cs" />
     <Compile Include="Controllers\ErrorsController.cs" />
     <Compile Include="Controllers\EventAssignedContactController.cs" />
+    <Compile Include="Controllers\EventMatterController.cs" />
     <Compile Include="Controllers\EventResponsibleUsersController.cs" />
     <Compile Include="Controllers\EventsController.cs" />
     <Compile Include="Controllers\EventTagsController.cs" />
@@ -197,6 +198,11 @@
     <Content Include="Views\EventAssignedContact\Details.aspx" />
     <Content Include="Views\EventAssignedContact\Edit.aspx" />
     <Content Include="Views\EventAssignedContact\SelectContactToAssign.aspx" />
+    <Content Include="Views\EventMatter\AssignEvent.aspx" />
+    <Content Include="Views\EventMatter\AssignMatter.aspx" />
+    <Content Include="Views\EventMatter\SelectEvent.aspx" />
+    <Content Include="Views\EventMatter\SelectMatter.aspx" />
+    <Content Include="Views\EventMatter\Unlink.aspx" />
     <Content Include="Views\EventResponsibleUsers\Create.aspx" />
     <Content Include="Views\EventResponsibleUsers\Delete.aspx" />
     <Content Include="Views\EventResponsibleUsers\Details.aspx" />
@@ -212,11 +218,13 @@
     <Content Include="Views\Events\SelectContact.aspx" />
     <Content Include="Views\Events\SelectUser.aspx" />
     <Content Include="Views\Events\Tags.aspx" />
+    <Content Include="Views\Events\Tasks.aspx" />
     <Content Include="Views\Events\UserAgenda.aspx" />
     <Content Include="Views\EventTags\Create.aspx" />
     <Content Include="Views\EventTags\Delete.aspx" />
     <Content Include="Views\EventTags\Details.aspx" />
     <Content Include="Views\EventTags\Edit.aspx" />
+    <Content Include="Views\Matters\Events.aspx" />
     <Content Include="Views\Shared\CoreDetailsView.ascx" />
     <Content Include="Views\Shared\Errors\Index.aspx" />
     <Content Include="Views\Shared\Errors\NotFound.aspx" />
@@ -277,6 +285,7 @@
     <Content Include="Views\Tasks\Details.aspx" />
     <Content Include="Views\Tasks\Documents.aspx" />
     <Content Include="Views\Tasks\Edit.aspx" />
+    <Content Include="Views\Tasks\Events.aspx" />
     <Content Include="Views\Tasks\Notes.aspx" />
     <Content Include="Views\Tasks\ResponsibleUsers.aspx" />
     <Content Include="Views\Tasks\Tags.aspx" />
@@ -322,7 +331,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Scripts\" />
-    <Folder Include="Views\EventMatters\" />
     <Folder Include="Views\EventTasks\" />
   </ItemGroup>
   <ItemGroup>
